# CrashReportImporter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml.example  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: docker-build.yml
newpipe_crash_report_importer/: __init__.py  _logging.py  cli.py  database_entry.py  exceptions.py  lmtp_server.py  mail_client.py  message.py  storage.py
newpipe_crash_report_importer/storage/: __init__.py  base.py  directory_storage.py  exceptions.py  glitchtip_storage.py
