[tool.poetry]
name = "crashreportimporter"
version = "0.0.1"
description = "NewPipe crash report importer"
authors = ["TheAssassin <theassassin@assassinate-you.net>"]
license = "MIT"
packages = [
    { include = "newpipe_crash_report_importer" },
]

[tool.poetry.dependencies]
python = "^3.12"
aiosmtpd = "^1.4.2"
bleach = "^6.2.0"
requests = "^2.27.1"
sentry-sdk = "~2.28.0"
aiohttp = {extras = ["speedups"], version = "^3.12.14"}
aiodns = "^3.4.0"
click = "^8.2.1"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
black = "^25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
