[tool.poetry]
name = "crashreportimporter"
version = "0.0.1"
description = "NewPipe crash report importer"
authors = ["TheAssassin <theassassin@assassinate-you.net>"]
license = "MIT"
packages = [
    { include = "newpipe_crash_report_importer" },
]

[tool.poetry.dependencies]
python = "^3.12"
aiosmtpd = "^1.4.2"
requests = "^2.33.1"
sentry-sdk = ">=2.57,<2.63"
aiohttp = {extras = ["speedups"], version = "^3.13.5"}
aiodns = "^4.0.0"
click = "^8.3.2"
coloredlogs = "^15.0"
nh3 = "^0.3.5"

[tool.poetry.group.dev.dependencies]
black = "^26.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
